fix: branch html

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ display: flex;
 
 body {
     text-align: center;
-    background: url(forest\ 3.jpg) no-repeat;
+    background: url(/img/forest\ 3.jpg) no-repeat;
     color: #000000;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
