--- a/style.css
+++ b/style.css
@@ -1,37 +1,151 @@
-body {
-    align-items: center;
-    text-align: left;
-    color: #000000;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
-    font-size: 18px;  
-    max-width: 1024px;
-    margin: 0 auto;
-    background: url(img/forest\ 3.jpg) no-repeat, center;
-    background-size: cover; 
-}
-h2  {
-    margin: 0 auto;
-    text-transform: uppercase;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-li {
-    margin: 5px 5px 5px;
-    text-align: left;
+body {
+    color: #000000;
+    font-family: 'Prata', serif;
+    font-weight: 400;
+    font-size: 20px;
+    letter-spacing: 0.06rem;
+    background-color: #000000;
 }
-ul {
-    margin: 5px 0px 5px;
-    border: 1px solid silver;
-    border-radius: 1em;
-}
-img {
-    text-align: left;
-    width: 20%;
-    border: 2px solid rgb(173, 223, 223);
-    border-radius: 25%;
-    margin-top: 2em;
-}
-main { 
+
+.wrapper {
+    margin: 0 auto 0 auto;
+    width: 100%;
+    max-width: 1280px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #000000;
+}
+
+.header {
+    position: fixed;
+    filter: invert(2);
+    top: 0;
+    left: 0;
+
+}
+
+/*-----------------------------------main------------------------------------*/
+main {
+    display: flex;
+    flex-direction: row;
+}
+
+nav {
+    margin-top: 40px;
+    width: 80%;
+    margin-left: 80px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    border-bottom: 3px solid #ffffff;
+}
+
+nav>a {
+    margin-bottom: 20px;
+    justify-content: center;
+    text-decoration: none;
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: 600;
+}
+
+/*-----------------------------------slidebar------------------------------------*/
+.slide_bar {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background: #141414;
+    color: #ffffff;
+    text-align: center;
+}
+
+.content {
+    width: 80%;
+    margin-left: 80px;
+}
+
+.skills {
+    border-bottom: 3px solid #ffffff;
+    text-align: left;
+}
+
+.skills :nth-child(1) {
+    padding-top: 40px;
+    padding-bottom: 10px;
+}
+
+.skills :nth-child(n+2) {
+    padding-top: 10px;
+    padding-left: 20px;
+}
+
+.skills :nth-child(5) {
+    padding-bottom: 40px;
+}
+
+.slide_bar>.photo {
+    margin-top: 0px;
+}
+
+.photo>img {
+    margin: 80px 60px 0px 60px;
+    border: 2px solid #ffffff;
+    border-radius: 100%;
+    background-image: no-repeat cover;
+}
+
+/*-----------------------------------lang------------------------------------*/
+.lang {
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.lang :nth-child(2) {
+    padding: 10px 0 120px 20px;
+}
+
+/*-----------------------------------lang------------------------------------*/
+.about_me {
+    background: #ffffff;
+}
+
+.Name,
+.about,
+p {
+    margin-left: 80px;
+}
+
+.Name {
+    margin-top: 80px;
+    font-size: 48px;
+    color: #444444;
+    background: #FFFFFF;
+    text-shadow: 1px 0px 1px #CCCCCC, 0px 1px 1px #EEEEEE, 2px 1px 1px #CCCCCC, 1px 2px 1px #EEEEEE, 3px 2px 1px #CCCCCC, 2px 3px 1px #EEEEEE, 4px 3px 1px #CCCCCC, 3px 4px 1px #EEEEEE, 5px 4px 1px #CCCCCC, 4px 5px 1px #EEEEEE, 6px 5px 1px #CCCCCC, 5px 6px 1px #EEEEEE, 7px 6px 1px #CCCCCC;
+    color: #444444;
+    background: #FFFFFF;
+
+}
+
+.about {
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+    font-weight: 600;
+    border-bottom: 3px solid #000000;
+}
+
+p {
+    text-align: justify;
+    padding-left: 50px;
+    padding-right: 20px;
 }
