--- a/style.css
+++ b/style.css
@@ -5,147 +5,182 @@
 
 body {
     color: #000000;
-    font-family: 'Prata', serif;
+    font-family: 'Ubuntu', sans-serif;
     font-weight: 400;
-    font-size: 18px;
-    letter-spacing: 0.06rem;
-    background-color: #000000;
+    font-size: 16px;
+    background-color: #303d46;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: #000000;
 }
 
 .wrapper {
-    margin: 0 auto 0 auto;
-    width: 100%;
-    max-width: 1280px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: #000000;
+    margin: 0 auto;
+    max-width: 1000px;
 }
 
 .header {
-    position: fixed;
-    filter: invert(2);
-    top: 0;
-    left: 0;
-
+    margin: 20px 0 20px 0;
+    color: white;
 }
 
-/*-----------------------------------main------------------------------------*/
+/*------------------------------------Main----------------------------------------------*/
+
 main {
+    padding: 20px 0 20px 20px;
     display: flex;
-    flex-direction: row;
+    background-color: rgb(255, 255, 255);
 }
 
-nav {
-    margin-top: 40px;
-    width: 80%;
-    margin-left: 80px;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    border-bottom: 3px solid #ffffff;
-}
-
-nav>a {
-    margin-bottom: 20px;
-    justify-content: center;
-    text-decoration: none;
-    font-size: 16px;
-    color: #ffffff;
-    font-weight: 600;
-}
-
-/*-----------------------------------slidebar------------------------------------*/
-.slide_bar {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    background: #141414;
-    color: #ffffff;
-    text-align: center;
-}
-
-.content {
-    width: 80%;
-    margin-left: 80px;
-}
-
-.skills {
-    border-bottom: 3px solid #ffffff;
-    text-align: left;
-}
-
-.skills :nth-child(1) {
-    padding-top: 40px;
-    padding-bottom: 10px;
-}
-
-.skills :nth-child(n+2) {
-    padding-top: 10px;
-    padding-left: 20px;
-}
-
-.skills :nth-child(5) {
-    padding-bottom: 40px;
-}
-
-.slide_bar>.photo {
-    margin-top: 0px;
-}
-
-.photo>img {
-    margin: 80px 60px 0px 60px;
+.me>img {
+    margin: 20px 0 20px 0;
     border: 2px solid #ffffff;
     border-radius: 100%;
     background-image: no-repeat cover;
 }
 
-/*-----------------------------------lang------------------------------------*/
-.lang {
-    padding-top: 40px;
+nav {
+    margin: 20px 0 20px 0;
+}
+
+/*------------------------------------maininfo----------------------------------------------*/
+
+.maininfo {
+    margin: 0 0 0 20px;
     display: flex;
     flex-direction: column;
-    text-align: left;
 }
 
-.lang :nth-child(2) {
-    padding: 10px 0 15px 20px;
-}
-
-/*-----------------------------------lang------------------------------------*/
 .about_me {
-    background: #ffffff;
+    padding: 20px 0 20px 20px;
+    color: #ffffff;
+    background-color: #313c4e;
 }
 
-.Name,
-.about,
-p {
-    margin-left: 80px;
+.about_me :nth-child(1) {
+    padding: 10px 0 10px 0;
+    font-size: 45px;
 }
 
-.Name {
-    margin-top: 80px;
-    font-size: 48px;
-    color: #444444;
-    background: #FFFFFF;
-    text-shadow: 1px 0px 1px #CCCCCC, 0px 1px 1px #EEEEEE, 2px 1px 1px #CCCCCC, 1px 2px 1px #EEEEEE, 3px 2px 1px #CCCCCC, 2px 3px 1px #EEEEEE, 4px 3px 1px #CCCCCC, 3px 4px 1px #EEEEEE, 5px 4px 1px #CCCCCC, 4px 5px 1px #EEEEEE, 6px 5px 1px #CCCCCC, 5px 6px 1px #EEEEEE, 7px 6px 1px #CCCCCC;
-    color: #444444;
-    background: #FFFFFF;
-
+.about_me :nth-child(2) {
+    width: 30%;
+    margin-bottom: 10px;
+    padding: 10px 0 5px 0;
+    border-bottom: 3px solid white;
 }
 
-.about {
-    margin-top: 20px;
-    margin-right: 20px;
-    margin-bottom: 30px;
-    padding-bottom: 10px;
-    font-weight: 600;
-    border-bottom: 3px solid #000000;
+.EXPERIENCE {
+    margin: 20px 0 0 0;
+    padding-left: 20px;
 }
 
-p {
-    text-align: justify;
-    padding-left: 50px;
-    padding-right: 20px;
+.EXPERIENCE>h3 {
+    width: 95%;
+    padding: 5px 0 5px 0;
+    font-size: 24px;
+    color: #313c4e;
+    border-bottom: 3px solid #313c4e;
+    ;
+}
+
+.EXPERIENCE>h4 {
+    margin: 15px 0 0 0;
+    padding: 5px 0 5px 0;
+    font-size: 18px;
+    color: #313c4e;
+}
+
+.EXPERIENCE h5{
+    margin: 15px 0 0 0;
+}
+
+.EXPERIENCE li {
+    list-style: square;
+}
+
+.date{
+    color: grey;
+    font-size: 14px;
+    font-style: italic;
+}
+
+.projects {
+    margin: 20px 0 0 0;
+    padding-left: 20px;
+}
+
+.projects h3 {
+    width: 95%;
+    padding: 5px 0 5px 0;
+    font-size: 24px;
+    color: #313c4e;
+    border-bottom: 3px solid #313c4e;
+}
+
+.projects h4 {
+    margin: 15px 0 0 0;
+    padding: 5px 0 5px 0;
+    font-size: 18px;
+    color: #313c4e;
+}
+
+.projects li {
+    list-style: square;
+}
+
+.education {
+    margin: 20px 0 0 0;
+    padding-left: 20px;
+}
+
+.education h3 {
+    width: 95%;
+    padding: 5px 0 5px 0;
+    font-size: 24px;
+    color: #313c4e;
+    border-bottom: 3px solid #313c4e;
+}
+
+.education h4 {
+    margin: 15px 0 0 0;
+    padding: 5px 0 5px 0;
+    font-size: 18px;
+    color: #313c4e;
+}
+
+/*------------------------------------slidebar----------------------------------------------*/
+
+.content h3{
+    width: 95%;
+    padding: 5px 0 5px 0;
+    font-size: 24px;
+    color: #313c4e;
+    border-bottom: 3px solid #313c4e;
+}
+
+.content div{
+    margin: 10px 0 10px 0;
+}
+
+/*------------------------------------Main----------------------------------------------*/
+
+/*------------------------------------Main----------------------------------------------*/
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.yearOftask {
+    color: #fff;
+    font-weight: 900;
 }
