--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ main {
     padding: 20px 0 20px 20px;
     display: flex;
     background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    box-shadow: 5px -5px 0px 1px rgba(255, 255, 255, 0.8), 10px -10px 0px 1px rgba(255, 255, 255, 0.77), 15px -15px 0px 1px rgba(255, 255, 255, 0.73);
 }
 
 .me>img {
@@ -64,7 +67,8 @@ nav :nth-child(n-1) {
 }
 
 .about_me {
-    padding: 20px 0 20px 20px;
+    padding: 20px 20px 20px 20px;
+    text-align: justify;
     color: #ffffff;
     background-color: #313c4e;
 }
@@ -82,6 +86,7 @@ nav :nth-child(n-1) {
 }
 
 .EXPERIENCE {
+    width: 95%;
     margin: 20px 0 0 0;
     padding-left: 20px;
 }
@@ -92,7 +97,6 @@ nav :nth-child(n-1) {
     font-size: 24px;
     color: #313c4e;
     border-bottom: 3px solid #313c4e;
-    ;
 }
 
 .EXPERIENCE>h4 {
@@ -137,15 +141,19 @@ nav :nth-child(n-1) {
 }
 
 .projects li {
+    width: 95%;
+    margin: 5px 0 5px 0;
     list-style: square;
 }
 
 .education {
+    width: 95%;
     margin: 20px 0 0 0;
     padding-left: 20px;
 }
 
 .education p {
+    max-width: 95%;
     font-weight: bolder;
     opacity: 90%;
 }
